--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,10 @@
   padding:0;
   box-sizing:0;
 }
+
+header, h1, nav, .list-comment {
+  font-family: 'Kaushan Script', cursive sans-serif;
+}
  
  header {
   width:90%;
@@ -64,9 +68,30 @@
    width:200px;
    height:250px;
    margin: 10px;
+   position:relative;
  }
  
  .list-comment {
    width:200px;
+   position:absolute;
+   left:0;
  }
+ 
+ .list-body {
+  display:block;
+  color: gray;
+  font-size: 12px;
+  overflow:hidden;
+  white-space:nowrap;
+  text-overflow:ellipasis;
+ }
+ 
+ .list-title {
+  display:block;
+  font-size:18px;
+  overflow:hidden;
+  white-space: nowrap;
+  text-overflow:ellipasis;
+ }
+ 
  
